--- a/src/scss/labor-page/labor-main-section.scss
+++ b/src/scss/labor-page/labor-main-section.scss
@@ -110,5 +110,41 @@
 }
 
 @media only screen and (max-width: 1024px) {
+    .labor-main-section__container {
+        position: relative;
+        justify-content: flex-end;
+    }
 
+    .lms-left-block {
+        position: absolute;
+        top: 20px;
+        left: 45px;
+        z-index: 100;
+    }
+
+    .lms-right-block {
+        width: 100%;
+        padding-left: 210px;
+    }
+
+    .lms-title-block__title {
+        color: $textContactblokColor;
+    }
+
+    .lms-title-block__discription {
+        color: #DE84A2;
+        margin-bottom: 186px;
+    }
+
+    .lms-title-block__button {
+        width: 235px;
+        height: 40px;
+        background-color: $bgColorBady;
+        color: $borderColorMax;
+    }
+
+    .windows-phone-block {
+        padding-top: 20px;
+        margin-bottom: 12px;
+    }
 }
