--- a/src/html/labor-page/labor-main-section.pug
+++ b/src/html/labor-page/labor-main-section.pug
@@ -4,7 +4,7 @@ section.labor-main-section
             .lms-title-block 
                 .lms-title-block__title БЕРЕЖЛИВАЯ КОМПАНИЯ
                 .lms-title-block__discription системные компании более привлекательны для заказчиков и инвесторов.
-                button(action="").lms-title-block__button Узнать подробнее ...
+                button(onclick="document.location='https://gubinvs.ru/lean/lean.html'").lms-title-block__button Узнать подробнее ...
         .lms-right-block
             img(src="../../img/labor-page/ss-img-gerl.png", alt="Приятная девушка в очках мило улыбается вам").lms-right-block__img
             .windows-phone-block
