--- a/src/scss/header.css
+++ b/src/scss/header.css
@@ -171,4 +171,16 @@
   .logo-title {
     display: none;
   }
+  .nav-header-list__item {
+    font-size: 16px;
+  }
+  .nav-block-active {
+    width: 100%;
+    padding: 10px 20px 10px 10px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .nav-header-list__item {
+    font-size: 14px;
+  }
 }
