--- a/src/scss/labor-page-style.css
+++ b/src/scss/labor-page-style.css
@@ -138,3 +138,34 @@
     margin-bottom: 12px;
   }
 }
+@media only screen and (max-width: 768px) {
+  .lms-left-block {
+    left: 65px;
+  }
+  .lms-right-block {
+    padding-left: 24px;
+  }
+  .nav-header-list__active {
+    margin-bottom: 10px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .lms-left-block {
+    left: 45px;
+  }
+  .lms-right-block__img {
+    display: none;
+  }
+}
+@media only screen and (max-width: 360px) {
+  .lms-title-block__discription {
+    width: 320px;
+  }
+  .windows-phone-block {
+    padding-top: 120px;
+  }
+  .lms-right-block {
+    padding-left: 24px;
+    height: 395px;
+  }
+}
