--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -1938,6 +1938,14 @@ select {
     line-height: 36px;
   }
 }
+body {
+  background-color: #ffffff;
+}
+
+.labor-main-section {
+  margin-bottom: 16px;
+}
+
 .labor-main-section__container {
   display: flex;
   justify-content: space-between;
@@ -2119,6 +2127,14 @@ select {
     height: 395px;
   }
 }
+.labor-suot-section {
+  background-color: #F9F8F8;
+}
+
+.labor-suot-section__title {
+  padding-top: 24px;
+}
+
 .messageok-section {
   display: flex;
   flex-direction: column;
