--- a/src/scss/labor-page-style.scss
+++ b/src/scss/labor-page-style.scss
@@ -1,5 +1,8 @@
 @import 'variables/variables.scss';
 
+body {
+    background-color: #ffffff;
+}
 
 //-- labor page section
 @import 'labor-page/labor-main-section.scss';
