--- a/src/scss/labor-page/labor-main-section.css
+++ b/src/scss/labor-page/labor-main-section.css
@@ -1,3 +1,7 @@
+.labor-main-section {
+  margin-bottom: 16px;
+}
+
 .labor-main-section__container {
   display: flex;
   justify-content: space-between;
