--- a/src/html/labor-page/labor-suot-section.pug
+++ b/src/html/labor-page/labor-suot-section.pug
@@ -1,2 +1,4 @@
 section.labor-suot-section
     .container.labor-suot-section__container 
+        h2.labor-suot-section__title Система управления охраной труда (СУОТ)
+        
