--- a/src/labor.pug
+++ b/src/labor.pug
@@ -18,5 +18,6 @@ block content
     include html/header.pug
     main 
         include html/labor-page/labor-main-section.pug 
-        
+        include html/labor-page/labor-suot-section.pug
     script(src="js/modules/burger-action.js")
+    
