--- a/src/scss/variables/variables.scss
+++ b/src/scss/variables/variables.scss
@@ -8,12 +8,14 @@ $ffTextBady: 'Mulish', sans-serif;
 //-- Цветовая палитра проекта
 // $color_light-blue: #E3E6E8;
 $bgColorBady: #F7F7F7;
-$titleColor: #000000;
+$bgSectionColor: #F9F8F8;
+$textContactblokColor: #FFFFFF;
 $borderColorMax: #8E0532;
 $borderColorMin: #242424;
 $textColor: #000000;
+$titleColor: #000000;
 $borderColor: #B3A99B;
-$textContactblokColor: #FFFFFF;
+
 
 
 
