--- a/src/html/labor-page/labor-suot-section.pug
+++ b/src/html/labor-page/labor-suot-section.pug
@@ -1,4 +1,28 @@
 section.labor-suot-section
     .container.labor-suot-section__container 
         h2.labor-suot-section__title Система управления охраной труда (СУОТ)
-        
+        .block-content-ss
+            .suot-card  
+                .suot-card__left-part
+                    .left-part-sc__title Комплект документов
+                    .left-part-sc__list
+                        .left-part-sc__item Приказы и положения
+                        .left-part-sc__item Инструкции по ОТ
+                        .left-part-sc__item Должностные инструкции
+                        .left-part-sc__item Журналы инструктажей
+                    .left-part-sc__button Оформить заявку
+                .suot-card__right-part
+                    .right-part-sc__text от 59 000 руб.
+            .suot-card  
+                .suot-card__left-part
+                    .left-part-sc__title Отдельные документы
+                    .left-part-sc__list
+                        .left-part-sc__item Положение по СУОТ и т.д.
+                        .left-part-sc__item Инструкция по ОТ
+                        .left-part-sc__item Конспект инструктажа
+                        .left-part-sc__item Мероприятия по ОТ
+                    .left-part-sc__button Оформить заявку
+                .suot-card__right-part
+                    .right-part-sc__text от 2 000 руб.
+
+
