--- a/src/scss/labor-page/labor-suot-section.scss
+++ b/src/scss/labor-page/labor-suot-section.scss
@@ -7,4 +7,82 @@
 
 .labor-suot-section__title {
     padding-top: 24px;
+    margin-bottom: 40px;
+}
+
+.block-content-ss {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.suot-card {
+    display: flex;
+    padding-left: 50px;
+    background-color: $textContactblokColor;
+}
+
+.suot-card__left-part {
+    width: 275px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.left-part-sc__title {
+    font-size: 20px;
+    font-family: $ffTextBady;
+    font-style: normal;
+    font-weight: 700;
+    margin-bottom: 24px;
+}
+
+.left-part-sc__list {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 96px;
+}
+
+.left-part-sc__item {
+    padding-left: 24px;
+    font-size: 16px;
+    font-family: $ffTextBady;
+    font-weight: 300;
+    background-image: url(../../img/labor-page/suot-card-icon.svg);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.left-part-sc__item:not(:last-of-type) {
+    margin-bottom: 4px;
+}
+
+.left-part-sc__button {
+    width: 190px;
+    height: 48px;
+    padding: 14px 24px;
+    text-align: center;
+    background-color: $borderColorMax;
+    color: $textContactblokColor;
+}
+
+.suot-card__right-part {
+    position: relative;
+    width: 200px;
+    background-color: $borderColorMax;
+}
+
+.right-part-sc__text {
+    position: absolute;
+    top: 160px;
+    left: -50px;
+    width: 290px;
+    font-family: $ffWindowsPhone;
+    font-size: 38px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    color: $textContactblokColor;
+    transform: rotate(-90deg);
+    flex-direction: column;
+    flex-shrink: 0;
 }
