--- a/src/html/labor-page/labor-suot-section.pug
+++ b/src/html/labor-page/labor-suot-section.pug
@@ -24,5 +24,16 @@ section.labor-suot-section
                     .left-part-sc__button Оформить заявку
                 .suot-card__right-part
                     .right-part-sc__text от 2 000 руб.
+            .suot-card  
+                .suot-card__left-part
+                    .left-part-sc__title Отдельные документы
+                    .left-part-sc__list
+                        .left-part-sc__item Положение по СУОТ и т.д.
+                        .left-part-sc__item Инструкция по ОТ
+                        .left-part-sc__item Конспект инструктажа
+                        .left-part-sc__item Мероприятия по ОТ
+                    .left-part-sc__button Оформить заявку
+                .suot-card__right-part
+                    .right-part-sc__text от 2 000 руб.
 
 
