--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -2129,6 +2129,7 @@ body {
 }
 .labor-suot-section {
   background-color: #F9F8F8;
+  padding-bottom: 40px;
 }
 
 .labor-suot-section__title {
@@ -2144,12 +2145,16 @@ body {
 
 .suot-card {
   display: flex;
-  padding-left: 50px;
+  padding-left: 20px;
   background-color: #FFFFFF;
 }
 
+.suot-card:not(:last-of-type) {
+  margin-right: 20px;
+}
+
 .suot-card__left-part {
-  width: 275px;
+  width: 256px;
   padding-top: 50px;
   padding-bottom: 50px;
 }
@@ -2185,7 +2190,7 @@ body {
 .left-part-sc__button {
   width: 190px;
   height: 48px;
-  padding: 14px 24px;
+  padding: 11px 24px;
   text-align: center;
   background-color: #8E0532;
   color: #FFFFFF;
@@ -2193,14 +2198,14 @@ body {
 
 .suot-card__right-part {
   position: relative;
-  width: 200px;
+  width: 64px;
   background-color: #8E0532;
 }
 
 .right-part-sc__text {
   position: absolute;
-  top: 160px;
-  left: -50px;
+  bottom: 200px;
+  left: -94px;
   width: 290px;
   font-family: "Roboto Condensed", sans-serif;
   font-size: 38px;
