--- a/src/scss/labor-page/labor-suot-section.css
+++ b/src/scss/labor-page/labor-suot-section.css
@@ -1,5 +1,6 @@
 .labor-suot-section {
   background-color: #F9F8F8;
+  padding-bottom: 40px;
 }
 
 .labor-suot-section__title {
@@ -15,12 +16,16 @@
 
 .suot-card {
   display: flex;
-  padding-left: 50px;
+  padding-left: 20px;
   background-color: #FFFFFF;
 }
 
+.suot-card:not(:last-of-type) {
+  margin-right: 20px;
+}
+
 .suot-card__left-part {
-  width: 275px;
+  width: 256px;
   padding-top: 50px;
   padding-bottom: 50px;
 }
@@ -56,7 +61,7 @@
 .left-part-sc__button {
   width: 190px;
   height: 48px;
-  padding: 14px 24px;
+  padding: 11px 24px;
   text-align: center;
   background-color: #8E0532;
   color: #FFFFFF;
@@ -64,14 +69,14 @@
 
 .suot-card__right-part {
   position: relative;
-  width: 200px;
+  width: 64px;
   background-color: #8E0532;
 }
 
 .right-part-sc__text {
   position: absolute;
-  top: 160px;
-  left: -50px;
+  bottom: 200px;
+  left: -94px;
   width: 290px;
   font-family: "Roboto Condensed", sans-serif;
   font-size: 38px;
