--- a/src/scss/labor-page/labor-suot-section.scss
+++ b/src/scss/labor-page/labor-suot-section.scss
@@ -3,6 +3,7 @@
 
 .labor-suot-section {
     background-color: $bgSectionColor;
+    padding-bottom: 40px;
 }
 
 .labor-suot-section__title {
@@ -18,12 +19,16 @@
 
 .suot-card {
     display: flex;
-    padding-left: 50px;
+    padding-left: 20px;
     background-color: $textContactblokColor;
 }
 
+.suot-card:not(:last-of-type) {
+    margin-right: 20px;
+}
+
 .suot-card__left-part {
-    width: 275px;
+    width: 256px;
     padding-top: 50px;
     padding-bottom: 50px;
 }
@@ -59,7 +64,7 @@
 .left-part-sc__button {
     width: 190px;
     height: 48px;
-    padding: 14px 24px;
+    padding: 11px 24px;
     text-align: center;
     background-color: $borderColorMax;
     color: $textContactblokColor;
@@ -67,14 +72,14 @@
 
 .suot-card__right-part {
     position: relative;
-    width: 200px;
+    width: 64px;
     background-color: $borderColorMax;
 }
 
 .right-part-sc__text {
     position: absolute;
-    top: 160px;
-    left: -50px;
+    bottom: 200px;
+    left: -94px;
     width: 290px;
     font-family: $ffWindowsPhone;
     font-size: 38px;
@@ -86,3 +91,4 @@
     flex-direction: column;
     flex-shrink: 0;
 }
+
