--- a/src/html/labor-page/labor-suot-section.pug
+++ b/src/html/labor-page/labor-suot-section.pug
@@ -24,7 +24,7 @@ section.labor-suot-section
                     .left-part-sc__button Оформить заявку
                 .suot-card__right-part
                     .right-part-sc__text от 2 000 руб.
-            .suot-card  
+            .suot-card.suot-card__none
                 .suot-card__left-part
                     .left-part-sc__title Отдельные документы
                     .left-part-sc__list
