--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -2154,7 +2154,7 @@ body {
 }
 
 .suot-card__left-part {
-  width: 256px;
+  width: 236px;
   padding-top: 50px;
   padding-bottom: 50px;
 }
@@ -2170,7 +2170,7 @@ body {
 .left-part-sc__list {
   display: flex;
   flex-direction: column;
-  margin-bottom: 96px;
+  margin-bottom: 60px;
 }
 
 .left-part-sc__item {
@@ -2184,7 +2184,7 @@ body {
 }
 
 .left-part-sc__item:not(:last-of-type) {
-  margin-bottom: 4px;
+  margin-bottom: 12px;
 }
 
 .left-part-sc__button {
@@ -2205,7 +2205,7 @@ body {
 .right-part-sc__text {
   position: absolute;
   bottom: 200px;
-  left: -94px;
+  left: -112px;
   width: 290px;
   font-family: "Roboto Condensed", sans-serif;
   font-size: 38px;
@@ -2218,6 +2218,19 @@ body {
   flex-shrink: 0;
 }
 
+@media only screen and (max-width: 1024px) {
+  .suot-card__none {
+    display: none;
+  }
+
+  .suot-card:not(:nth-child(3)) {
+    margin-bottom: 20px;
+  }
+
+  .suot-card:nth-child(2) {
+    margin-right: 0px;
+  }
+}
 .messageok-section {
   display: flex;
   flex-direction: column;
