--- a/src/scss/labor-page/labor-suot-section.css
+++ b/src/scss/labor-page/labor-suot-section.css
@@ -25,7 +25,7 @@
 }
 
 .suot-card__left-part {
-  width: 256px;
+  width: 236px;
   padding-top: 50px;
   padding-bottom: 50px;
 }
@@ -41,7 +41,7 @@
 .left-part-sc__list {
   display: flex;
   flex-direction: column;
-  margin-bottom: 96px;
+  margin-bottom: 60px;
 }
 
 .left-part-sc__item {
@@ -55,7 +55,7 @@
 }
 
 .left-part-sc__item:not(:last-of-type) {
-  margin-bottom: 4px;
+  margin-bottom: 12px;
 }
 
 .left-part-sc__button {
@@ -76,7 +76,7 @@
 .right-part-sc__text {
   position: absolute;
   bottom: 200px;
-  left: -94px;
+  left: -112px;
   width: 290px;
   font-family: "Roboto Condensed", sans-serif;
   font-size: 38px;
@@ -87,4 +87,16 @@
   transform: rotate(-90deg);
   flex-direction: column;
   flex-shrink: 0;
+}
+
+@media only screen and (max-width: 1024px) {
+  .suot-card__none {
+    display: none;
+  }
+  .suot-card:not(:nth-child(3)) {
+    margin-bottom: 20px;
+  }
+  .suot-card:nth-child(2) {
+    margin-right: 0px;
+  }
 }
