--- a/src/scss/labor-page/labor-suot-section.scss
+++ b/src/scss/labor-page/labor-suot-section.scss
@@ -18,8 +18,10 @@
 }
 
 .suot-card {
+    position: relative;
     display: flex;
     padding-left: 20px;
+    width: 320px;
     background-color: $textContactblokColor;
 }
 
@@ -71,7 +73,6 @@
 }
 
 .suot-card__right-part {
-    position: relative;
     width: 64px;
     background-color: $borderColorMax;
 }
@@ -79,7 +80,7 @@
 .right-part-sc__text {
     position: absolute;
     bottom: 200px;
-    left: -112px;
+    right: -112px;
     width: 290px;
     font-family: $ffWindowsPhone;
     font-size: 38px;
@@ -96,7 +97,7 @@
     .suot-card__none {
         display: none;
     }
-    
+
     .suot-card:not(:nth-child(3)) {
         margin-bottom: 20px;
     }
@@ -104,6 +105,21 @@
     .suot-card:nth-child(2) {
         margin-right: 0px;
     }
-
-
 } 
+
+@media only screen and (max-width: 768px) {
+    .suot-card__none {
+        display: inherit;
+    }
+
+    .suot-card {
+        width: 100%;
+    }
+    .suot-card:not(:last-of-type) {
+        margin-right: 0px;
+    }
+
+    .suot-card__left-part {
+        width: calc(100% - 64px);
+    }
+}
