--- a/src/scss/labor-page/labor-suot-section.css
+++ b/src/scss/labor-page/labor-suot-section.css
@@ -15,8 +15,10 @@
 }
 
 .suot-card {
+  position: relative;
   display: flex;
   padding-left: 20px;
+  width: 320px;
   background-color: #FFFFFF;
 }
 
@@ -68,7 +70,6 @@
 }
 
 .suot-card__right-part {
-  position: relative;
   width: 64px;
   background-color: #8E0532;
 }
@@ -76,7 +77,7 @@
 .right-part-sc__text {
   position: absolute;
   bottom: 200px;
-  left: -112px;
+  right: -112px;
   width: 290px;
   font-family: "Roboto Condensed", sans-serif;
   font-size: 38px;
@@ -98,5 +99,19 @@
   }
   .suot-card:nth-child(2) {
     margin-right: 0px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .suot-card__none {
+    display: inherit;
+  }
+  .suot-card {
+    width: 100%;
+  }
+  .suot-card:not(:last-of-type) {
+    margin-right: 0px;
+  }
+  .suot-card__left-part {
+    width: calc(100% - 64px);
   }
 }
