--- a/src/scss/labor-page/labor-suot-section.css
+++ b/src/scss/labor-page/labor-suot-section.css
@@ -1,6 +1,7 @@
 .labor-suot-section {
   background-color: #F9F8F8;
   padding-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 .labor-suot-section__title {
