--- a/src/labor.pug
+++ b/src/labor.pug
@@ -19,5 +19,6 @@ block content
     main 
         include html/labor-page/labor-main-section.pug 
         include html/labor-page/labor-suot-section.pug
+        include html/labor-page/labor-control-section.pug
     script(src="js/modules/burger-action.js")
     
