--- a/src/scss/labor-page-style.css
+++ b/src/scss/labor-page-style.css
@@ -192,6 +192,7 @@ body {
 }
 
 .suot-card {
+  position: relative;
   display: flex;
   padding-left: 20px;
   width: 320px;
@@ -246,7 +247,6 @@ body {
 }
 
 .suot-card__right-part {
-  position: relative;
   width: 64px;
   background-color: #8E0532;
 }
@@ -254,7 +254,7 @@ body {
 .right-part-sc__text {
   position: absolute;
   bottom: 200px;
-  left: -112px;
+  right: -112px;
   width: 290px;
   font-family: "Roboto Condensed", sans-serif;
   font-size: 38px;
@@ -276,5 +276,136 @@ body {
   }
   .suot-card:nth-child(2) {
     margin-right: 0px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .suot-card__none {
+    display: inherit;
+  }
+  .suot-card {
+    width: 100%;
+  }
+  .suot-card:not(:last-of-type) {
+    margin-right: 0px;
+  }
+  .suot-card__left-part {
+    width: calc(100% - 64px);
+  }
+}
+.labor-suot-section {
+  background-color: #F9F8F8;
+  padding-bottom: 40px;
+}
+
+.labor-suot-section__title {
+  padding-top: 24px;
+  margin-bottom: 40px;
+}
+
+.block-content-ss {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.suot-card {
+  position: relative;
+  display: flex;
+  padding-left: 20px;
+  width: 320px;
+  background-color: #FFFFFF;
+}
+
+.suot-card:not(:last-of-type) {
+  margin-right: 20px;
+}
+
+.suot-card__left-part {
+  width: 236px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.left-part-sc__title {
+  font-size: 20px;
+  font-family: "Mulish", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  margin-bottom: 24px;
+}
+
+.left-part-sc__list {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 60px;
+}
+
+.left-part-sc__item {
+  padding-left: 24px;
+  font-size: 16px;
+  font-family: "Mulish", sans-serif;
+  font-weight: 300;
+  background-image: url(../../img/labor-page/suot-card-icon.svg);
+  background-repeat: no-repeat;
+  background-position: left;
+}
+
+.left-part-sc__item:not(:last-of-type) {
+  margin-bottom: 12px;
+}
+
+.left-part-sc__button {
+  width: 190px;
+  height: 48px;
+  padding: 11px 24px;
+  text-align: center;
+  background-color: #8E0532;
+  color: #FFFFFF;
+}
+
+.suot-card__right-part {
+  width: 64px;
+  background-color: #8E0532;
+}
+
+.right-part-sc__text {
+  position: absolute;
+  bottom: 200px;
+  right: -112px;
+  width: 290px;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  color: #FFFFFF;
+  transform: rotate(-90deg);
+  flex-direction: column;
+  flex-shrink: 0;
+}
+
+@media only screen and (max-width: 1024px) {
+  .suot-card__none {
+    display: none;
+  }
+  .suot-card:not(:nth-child(3)) {
+    margin-bottom: 20px;
+  }
+  .suot-card:nth-child(2) {
+    margin-right: 0px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .suot-card__none {
+    display: inherit;
+  }
+  .suot-card {
+    width: 100%;
+  }
+  .suot-card:not(:last-of-type) {
+    margin-right: 0px;
+  }
+  .suot-card__left-part {
+    width: calc(100% - 64px);
   }
 }
