--- a/src/scss/labor-page-style.scss
+++ b/src/scss/labor-page-style.scss
@@ -7,3 +7,4 @@ body {
 //-- labor page section
 @import 'labor-page/labor-main-section.scss';
 @import 'labor-page/labor-suot-section.scss';
+@import 'labor-page/labor-control-section.scss';
