--- a/src/scss/labor-page/labor-control-section.scss
+++ b/src/scss/labor-page/labor-control-section.scss
@@ -1,3 +1,51 @@
 //-- переменные
-@import 'variables/variables.scss';
+@import '../variables/variables.scss';
 
+.labor-control-section__container {
+    position: relative;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    padding-left: 20px;
+    background-color: $bgSectionColor;
+    margin-bottom: 20px;
+}
+
+.labor-control-section__img {
+    position: absolute;
+    bottom: -20px;
+    right: 0px;
+}
+
+.labor-control-section__title {
+    margin-bottom: 20px;
+}
+
+.labor-control-section__discr {
+    width: 406px;
+    margin-bottom: 94px;
+}
+
+.labor-control-section__slogan {
+    color: $borderColorMax;
+    font-family: $ffWindowsPhone;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.labor-control-section__slogan_light {
+    color: #CA6486;
+}
+
+@media only screen and (max-width: 768px) {
+    .labor-control-section__img {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .labor-control-section__discr {
+        width: 100%;
+    }
+}
