--- a/src/scss/labor-page/labor-suot-section.scss
+++ b/src/scss/labor-page/labor-suot-section.scss
@@ -4,6 +4,7 @@
 .labor-suot-section {
     background-color: $bgSectionColor;
     padding-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .labor-suot-section__title {
