--- a/src/html/labor-page/labor-suot-section.pug
+++ b/src/html/labor-page/labor-suot-section.pug
@@ -10,9 +10,8 @@ section.labor-suot-section
                         .left-part-sc__item Инструкции по ОТ
                         .left-part-sc__item Должностные инструкции
                         .left-part-sc__item Журналы инструктажей
+                .suot-card__bottom-part
                     .left-part-sc__button Оформить заявку
-                .suot-card__right-part
-                    .right-part-sc__text от 59 000 руб.
             .suot-card  
                 .suot-card__left-part
                     .left-part-sc__title Отдельные документы
@@ -21,9 +20,8 @@ section.labor-suot-section
                         .left-part-sc__item Инструкция по ОТ
                         .left-part-sc__item Конспект инструктажа
                         .left-part-sc__item Мероприятия по ОТ
+                .suot-card__bottom-part
                     .left-part-sc__button Оформить заявку
-                .suot-card__right-part
-                    .right-part-sc__text от 2 000 руб.
             .suot-card.suot-card__none
                 .suot-card__left-part
                     .left-part-sc__title Отдельные документы
@@ -32,8 +30,7 @@ section.labor-suot-section
                         .left-part-sc__item Инструкция по ОТ
                         .left-part-sc__item Конспект инструктажа
                         .left-part-sc__item Мероприятия по ОТ
+                .suot-card__bottom-part
                     .left-part-sc__button Оформить заявку
-                .suot-card__right-part
-                    .right-part-sc__text от 2 000 руб.
 
 
