--- a/src/scss/labor-page-style.css
+++ b/src/scss/labor-page-style.css
@@ -178,6 +178,7 @@ body {
 .labor-suot-section {
   background-color: #F9F8F8;
   padding-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 .labor-suot-section__title {
@@ -292,120 +293,50 @@ body {
     width: calc(100% - 64px);
   }
 }
-.labor-suot-section {
+.labor-control-section__container {
+  position: relative;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  padding-left: 20px;
   background-color: #F9F8F8;
-  padding-bottom: 40px;
+  margin-bottom: 20px;
 }
 
-.labor-suot-section__title {
-  padding-top: 24px;
-  margin-bottom: 40px;
-}
-
-.block-content-ss {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.suot-card {
-  position: relative;
-  display: flex;
-  padding-left: 20px;
-  width: 320px;
-  background-color: #FFFFFF;
-}
-
-.suot-card:not(:last-of-type) {
-  margin-right: 20px;
-}
-
-.suot-card__left-part {
-  width: 236px;
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-
-.left-part-sc__title {
-  font-size: 20px;
-  font-family: "Mulish", sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  margin-bottom: 24px;
-}
-
-.left-part-sc__list {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 60px;
-}
-
-.left-part-sc__item {
-  padding-left: 24px;
-  font-size: 16px;
-  font-family: "Mulish", sans-serif;
-  font-weight: 300;
-  background-image: url(../../img/labor-page/suot-card-icon.svg);
-  background-repeat: no-repeat;
-  background-position: left;
-}
-
-.left-part-sc__item:not(:last-of-type) {
-  margin-bottom: 12px;
-}
-
-.left-part-sc__button {
-  width: 190px;
-  height: 48px;
-  padding: 11px 24px;
-  text-align: center;
-  background-color: #8E0532;
-  color: #FFFFFF;
-}
-
-.suot-card__right-part {
-  width: 64px;
-  background-color: #8E0532;
-}
-
-.right-part-sc__text {
+.labor-control-section__img {
   position: absolute;
-  bottom: 200px;
-  right: -112px;
-  width: 290px;
+  bottom: -20px;
+  right: 0px;
+}
+
+.labor-control-section__title {
+  margin-bottom: 20px;
+}
+
+.labor-control-section__discr {
+  width: 406px;
+  margin-bottom: 94px;
+}
+
+.labor-control-section__slogan {
+  color: #8E0532;
   font-family: "Roboto Condensed", sans-serif;
-  font-size: 38px;
+  font-size: 24px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  color: #FFFFFF;
-  transform: rotate(-90deg);
-  flex-direction: column;
-  flex-shrink: 0;
 }
 
-@media only screen and (max-width: 1024px) {
-  .suot-card__none {
+.labor-control-section__slogan_light {
+  color: #CA6486;
+}
+
+@media only screen and (max-width: 768px) {
+  .labor-control-section__img {
     display: none;
-  }
-  .suot-card:not(:nth-child(3)) {
-    margin-bottom: 20px;
-  }
-  .suot-card:nth-child(2) {
-    margin-right: 0px;
   }
 }
 @media only screen and (max-width: 768px) {
-  .suot-card__none {
-    display: inherit;
-  }
-  .suot-card {
+  .labor-control-section__discr {
     width: 100%;
-  }
-  .suot-card:not(:last-of-type) {
-    margin-right: 0px;
-  }
-  .suot-card__left-part {
-    width: calc(100% - 64px);
   }
 }
