--- a/src/scss/labor-page/labor-suot-section.scss
+++ b/src/scss/labor-page/labor-suot-section.scss
@@ -9,19 +9,19 @@
 
 .labor-suot-section__title {
     padding-top: 24px;
+    padding-left: 90px;
     margin-bottom: 40px;
 }
 
 .block-content-ss {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .suot-card {
-    position: relative;
     display: flex;
-    padding-left: 20px;
+    flex-direction: column;
     width: 320px;
     background-color: $textContactblokColor;
 }
@@ -31,7 +31,7 @@
 }
 
 .suot-card__left-part {
-    width: 236px;
+    width: 320px;
     padding-top: 50px;
     padding-bottom: 50px;
 }
@@ -41,13 +41,15 @@
     font-family: $ffTextBady;
     font-style: normal;
     font-weight: 700;
+    padding-left: 24px;
     margin-bottom: 24px;
 }
 
 .left-part-sc__list {
     display: flex;
     flex-direction: column;
-    margin-bottom: 60px;
+    padding-left: 24px;
+    margin-bottom: 40px;
 }
 
 .left-part-sc__item {
@@ -64,6 +66,15 @@
     margin-bottom: 12px;
 }
 
+.suot-card__bottom-part {
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+    width: 196px;
+    height: 54px;
+    background-color: $bgSectionColor;
+}
+
 .left-part-sc__button {
     width: 190px;
     height: 48px;
@@ -73,25 +84,11 @@
     color: $textContactblokColor;
 }
 
-.suot-card__right-part {
-    width: 64px;
-    background-color: $borderColorMax;
-}
 
-.right-part-sc__text {
-    position: absolute;
-    bottom: 200px;
-    right: -112px;
-    width: 290px;
-    font-family: $ffWindowsPhone;
-    font-size: 38px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    color: $textContactblokColor;
-    transform: rotate(-90deg);
-    flex-direction: column;
-    flex-shrink: 0;
+@media only screen and (max-width: 1280px) {
+    .labor-suot-section__title {
+        padding-left: 0px;
+    }
 }
 
 @media only screen and (max-width: 1024px) {
@@ -123,4 +120,6 @@
     .suot-card__left-part {
         width: calc(100% - 64px);
     }
+
+
 }
