--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -2064,19 +2064,19 @@ body {
 
 .labor-suot-section__title {
   padding-top: 24px;
+  padding-left: 90px;
   margin-bottom: 40px;
 }
 
 .block-content-ss {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .suot-card {
-  position: relative;
   display: flex;
-  padding-left: 20px;
+  flex-direction: column;
   width: 320px;
   background-color: #FFFFFF;
 }
@@ -2086,7 +2086,7 @@ body {
 }
 
 .suot-card__left-part {
-  width: 236px;
+  width: 320px;
   padding-top: 50px;
   padding-bottom: 50px;
 }
@@ -2096,13 +2096,15 @@ body {
   font-family: "Mulish", sans-serif;
   font-style: normal;
   font-weight: 700;
+  padding-left: 24px;
   margin-bottom: 24px;
 }
 
 .left-part-sc__list {
   display: flex;
   flex-direction: column;
-  margin-bottom: 60px;
+  padding-left: 24px;
+  margin-bottom: 40px;
 }
 
 .left-part-sc__item {
@@ -2119,6 +2121,15 @@ body {
   margin-bottom: 12px;
 }
 
+.suot-card__bottom-part {
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+  width: 196px;
+  height: 54px;
+  background-color: #F9F8F8;
+}
+
 .left-part-sc__button {
   width: 190px;
   height: 48px;
@@ -2128,27 +2139,11 @@ body {
   color: #FFFFFF;
 }
 
-.suot-card__right-part {
-  width: 64px;
-  background-color: #8E0532;
+@media only screen and (max-width: 1280px) {
+  .labor-suot-section__title {
+    padding-left: 0px;
+  }
 }
-
-.right-part-sc__text {
-  position: absolute;
-  bottom: 200px;
-  right: -112px;
-  width: 290px;
-  font-family: "Roboto Condensed", sans-serif;
-  font-size: 38px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  color: #FFFFFF;
-  transform: rotate(-90deg);
-  flex-direction: column;
-  flex-shrink: 0;
-}
-
 @media only screen and (max-width: 1024px) {
   .suot-card__none {
     display: none;
