--- a/src/html/labor-page/labor-control-section.pug
+++ b/src/html/labor-page/labor-control-section.pug
@@ -5,3 +5,25 @@ section.labor-control-section
         .labor-control-section__slogan.labor-control-section__slogan_light КУРИРУЕМ 3-Х СТУПЕНЧАТУЮ
         .labor-control-section__slogan СИСТЕМУ КОНТРОЛЯ ФУНКЦИОНИРОВАНИЯ СУОТ
         img(src="../../img/labor-page/labor-control-section__img.png", alt="Инспектор девушка проверяет по чек-листу").labor-control-section__img
+    .container.labor-control-section__card-block 
+        .card-lcs
+            .card-lcs__bady
+                img(src="../../img/labor-page/card-lcs-icon.svg", alt="Иконка планшета с чек листом").card-lcs__icon
+                .card-lcs__title Реализуется на уровне производственного участка
+                .card-lcs__discr Прорабы, механики, бригадиры проводят проверку исправности оборудования, приспособлений, инструмента, наличия средств защиты  перед работой и в течение рабочего дня
+            .card-lcs__border
+                .card-lcs__border_discr I ступень контроля
+        .card-lcs
+            .card-lcs__bady
+                img(src="../../img/labor-page/card-lcs-icon.svg", alt="Иконка планшета с чек листом").card-lcs__icon
+                .card-lcs__title Реализуется на уровне руководителя отдела
+                .card-lcs__discr Проводят проверки реализации первой ступени контроля, проверяют состояние рабочих мест на предмет защищенности от вредных факторов, состояние бытовых и производственных помещений.
+            .card-lcs__border
+                .card-lcs__border_discr II ступень контроля
+        .card-lcs
+            .card-lcs__bady
+                img(src="../../img/labor-page/card-lcs-icon.svg", alt="Иконка планшета с чек листом").card-lcs__icon
+                .card-lcs__title Реализуется комиссией в составе руководителей
+                .card-lcs__discr Проводят проверки надлежащего выполнения мероприятий предусмотренных I и II ступенями, исполнение требований нормативной документации по ОТ в Обществе.
+            .card-lcs__border
+                .card-lcs__border_discr III ступень контроля
