--- a/src/labor.pug
+++ b/src/labor.pug
@@ -4,7 +4,7 @@ extends doctypes.pug
 //- Изменил название страницы
 block doctype
     //- Описание страницы в head discription
-    - var contentDiscription = 'Внедрение системы управления охраной труда в компании';
+    - var contentDiscription = 'Внедрение системы управления охраной труда на предприятии';
     //- Наименование главной страницы
     - var titleName = 'Система управления охраной труда (СУОТ)';
     //- Массив с путями к файлам со стилями
