--- a/src/labor.pug
+++ b/src/labor.pug
@@ -20,5 +20,6 @@ block content
         include html/labor-page/labor-main-section.pug 
         include html/labor-page/labor-suot-section.pug
         include html/labor-page/labor-control-section.pug
+        include html/labor-page/labor-information-section.pug
     script(src="js/modules/burger-action.js")
     
