--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -74,6 +74,7 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
+  -webkit-text-decoration-skip: ink;
   text-decoration-skip-ink: auto;
 }
 
@@ -109,6 +110,12 @@ select {
     scroll-behavior: auto !important;
   }
 }
+::-moz-placeholder {
+  padding-left: 20px;
+  color: #B3A99B;
+  font-size: 14px;
+}
+
 ::placeholder {
   padding-left: 20px;
   color: #B3A99B;
@@ -741,6 +748,7 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
+  -webkit-text-decoration-skip: ink;
   text-decoration-skip-ink: auto;
 }
 
@@ -883,6 +891,7 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
+  -webkit-text-decoration-skip: ink;
   text-decoration-skip-ink: auto;
 }
 
@@ -2394,3 +2403,5 @@ body {
   display: flex;
   justify-content: space-between;
 }
+
+/*# sourceMappingURL=style.css.map */
