--- a/src/scss/lean-page-style.css
+++ b/src/scss/lean-page-style.css
@@ -347,7 +347,8 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
 }
 
 a {
@@ -489,7 +490,8 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
 }
 
 a {
@@ -779,4 +781,4 @@ select {
   .form-tel-footer__input {
     width: 190px;
   }
-}
+}/*# sourceMappingURL=lean-page-style.css.map */
