--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -74,7 +74,8 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
 }
 
 a {
@@ -108,6 +109,11 @@ select {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
+}
+::-moz-placeholder {
+  padding-left: 20px;
+  color: #B3A99B;
+  font-size: 14px;
 }
 ::placeholder {
   padding-left: 20px;
@@ -728,7 +734,8 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
 }
 
 a {
@@ -870,7 +877,8 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
 }
 
 a {
@@ -2292,6 +2300,12 @@ body {
     margin-right: 0px;
   }
 }
+.labor-information-section__title {
+  width: 100%;
+  border-bottom: 1px solid #F9F8F8;
+  color: #F9F8F8;
+}
+
 .messageok-section {
   display: flex;
   flex-direction: column;
@@ -2313,4 +2327,4 @@ body {
 .discriptin-block {
   display: flex;
   justify-content: space-between;
-}
+}/*# sourceMappingURL=style.css.map */
