--- a/src/scss/labor-page-style.scss
+++ b/src/scss/labor-page-style.scss
@@ -8,3 +8,4 @@ body {
 @import 'labor-page/labor-main-section.scss';
 @import 'labor-page/labor-suot-section.scss';
 @import 'labor-page/labor-control-section.scss';
+@import 'labor-page/labor-information-section.scss';
