--- a/src/scss/index-page/index-regulation-section.css
+++ b/src/scss/index-page/index-regulation-section.css
@@ -64,8 +64,7 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  -webkit-text-decoration-skip: ink;
-          text-decoration-skip-ink: auto;
+  text-decoration-skip-ink: auto;
 }
 
 a {
@@ -140,4 +139,4 @@ select {
   top: 334px;
   left: -170px;
   right: initial;
-}/*# sourceMappingURL=index-regulation-section.css.map */
+}
