--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -74,7 +74,6 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  -webkit-text-decoration-skip: ink;
   text-decoration-skip-ink: auto;
 }
 
@@ -110,12 +109,6 @@ select {
     scroll-behavior: auto !important;
   }
 }
-::-moz-placeholder {
-  padding-left: 20px;
-  color: #B3A99B;
-  font-size: 14px;
-}
-
 ::placeholder {
   padding-left: 20px;
   color: #B3A99B;
@@ -748,7 +741,6 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  -webkit-text-decoration-skip: ink;
   text-decoration-skip-ink: auto;
 }
 
@@ -891,7 +883,6 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  -webkit-text-decoration-skip: ink;
   text-decoration-skip-ink: auto;
 }
 
@@ -2381,6 +2372,14 @@ body {
     margin-right: 0px;
   }
 }
+.labor-information-section__title {
+  width: 100%;
+  padding-bottom: 4px;
+  border-bottom: 1px solid #D9D9D9;
+  color: #D9D9D9;
+  margin-bottom: 20px;
+}
+
 .messageok-section {
   display: flex;
   flex-direction: column;
@@ -2403,5 +2402,3 @@ body {
   display: flex;
   justify-content: space-between;
 }
-
-/*# sourceMappingURL=style.css.map */
