--- a/src/scss/labor-page/labor-information-section.css
+++ b/src/scss/labor-page/labor-information-section.css
@@ -1,5 +1,7 @@
 .labor-information-section__title {
   width: 100%;
-  border-bottom: 1px solid #F9F8F8;
-  color: #F9F8F8;
-}/*# sourceMappingURL=labor-information-section.css.map */
+  padding-bottom: 4px;
+  border-bottom: 1px solid #D9D9D9;
+  color: #D9D9D9;
+  margin-bottom: 20px;
+}
