--- a/src/scss/labor-page/labor-information-section.scss
+++ b/src/scss/labor-page/labor-information-section.scss
@@ -3,6 +3,8 @@
 
 .labor-information-section__title {
     width: 100%;
-    border-bottom: 1px solid $bgSectionColor;
-    color: $bgSectionColor;
+    padding-bottom: 4px;
+    border-bottom: 1px solid #D9D9D9;
+    color: #D9D9D9;
+    margin-bottom: 20px;
 }
