--- a/src/scss/lean-page-style.css
+++ b/src/scss/lean-page-style.css
@@ -347,8 +347,7 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  -webkit-text-decoration-skip: ink;
-          text-decoration-skip-ink: auto;
+  text-decoration-skip-ink: auto;
 }
 
 a {
@@ -490,8 +489,7 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  -webkit-text-decoration-skip: ink;
-          text-decoration-skip-ink: auto;
+  text-decoration-skip-ink: auto;
 }
 
 a {
@@ -781,4 +779,4 @@ select {
   .form-tel-footer__input {
     width: 190px;
   }
-}/*# sourceMappingURL=lean-page-style.css.map */
+}
