--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -74,8 +74,7 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  -webkit-text-decoration-skip: ink;
-          text-decoration-skip-ink: auto;
+  text-decoration-skip-ink: auto;
 }
 
 a {
@@ -109,11 +108,6 @@ select {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
-}
-::-moz-placeholder {
-  padding-left: 20px;
-  color: #B3A99B;
-  font-size: 14px;
 }
 ::placeholder {
   padding-left: 20px;
@@ -734,8 +728,7 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  -webkit-text-decoration-skip: ink;
-          text-decoration-skip-ink: auto;
+  text-decoration-skip-ink: auto;
 }
 
 a {
@@ -877,8 +870,7 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  -webkit-text-decoration-skip: ink;
-          text-decoration-skip-ink: auto;
+  text-decoration-skip-ink: auto;
 }
 
 a {
@@ -2302,8 +2294,10 @@ body {
 }
 .labor-information-section__title {
   width: 100%;
-  border-bottom: 1px solid #F9F8F8;
-  color: #F9F8F8;
+  padding-bottom: 4px;
+  border-bottom: 1px solid #D9D9D9;
+  color: #D9D9D9;
+  margin-bottom: 20px;
 }
 
 .messageok-section {
@@ -2327,4 +2321,4 @@ body {
 .discriptin-block {
   display: flex;
   justify-content: space-between;
-}/*# sourceMappingURL=style.css.map */
+}
