--- a/src/html/labor-page/labor-information-section.pug
+++ b/src/html/labor-page/labor-information-section.pug
@@ -1,4 +1,19 @@
 section.labor-information-section 
     .container.labor-information-section__container 
         h1.labor-information-section__title ВНЕДРЕНИЕ СИСТЕМЫ УПРАВЛЕНИЯ ОХРАНОЙ ТРУДА НА ПРЕДПРИЯТИИ
-        
+        .labor-information-section__discr-block
+            .discr-block-lis__card.discr-block-lis__card1
+                .db-lis-card__title ЗАКАЗАТЬ ВНЕДРЕНИЕ
+                .db-lis-card__text Для расчета стоимости и сроков внедрения системы управления охраной труда на предприятии, можно оформить электронную заявку или позвонить по телефону +7 (812) 921-59-71 и согласовать видео встречу.
+                .left-part-sc__button Оформить заявку
+            .discr-block-lis__card.discr-block-lis__card2
+                .db-lis-card__title АУДИТ КОМПАНИИ
+                .db-lis-card__text.db-lis-card__text_card2 После подписания договора проводится аудит компании, для уточнения начальных данных и выявления необходимых потребностей.
+        .labor-information-section__discr-block
+            .discr-block-lis__card.discr-block-lis__card3
+                .db-lis-card__title РАЗРАБОТКА ДОКУМЕНТАЦИИ
+                .db-lis-card__text.db-lis-card__text_card3 На основании результатов аудита проводится работа по разработке пакета документов определяющих политику в области охраны труда и внедрение их на предприятии.
+            .discr-block-lis__card.discr-block-lis__card4
+                .db-lis-card__title ОБУЧЕНИЕ ПЕРСОНАЛА
+                .db-lis-card__text.db-lis-card__text_card4 На основании разработанной нормативной документации проводится обучение персонала и верификация полученных ими знаний.
+                
