--- a/src/labor.pug
+++ b/src/labor.pug
@@ -21,5 +21,6 @@ block content
         include html/labor-page/labor-suot-section.pug
         include html/labor-page/labor-control-section.pug
         include html/labor-page/labor-information-section.pug
+    include html/footer.pug 
     script(src="js/modules/burger-action.js")
     
