--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -74,7 +74,8 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
 }
 
 a {
@@ -108,6 +109,11 @@ select {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
+}
+::-moz-placeholder {
+  padding-left: 20px;
+  color: #B3A99B;
+  font-size: 14px;
 }
 ::placeholder {
   padding-left: 20px;
@@ -728,7 +734,8 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
 }
 
 a {
@@ -870,7 +877,8 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
 }
 
 a {
@@ -2356,6 +2364,18 @@ body {
   width: 370px;
 }
 
+@media only screen and (max-width: 1280px) {
+  .discr-block-lis__card1 {
+    width: 660px;
+  }
+  .discr-block-lis__card2 {
+    width: 320px;
+  }
+  .discr-block-lis__card3,
+  .discr-block-lis__card4 {
+    width: 490px;
+  }
+}
 .messageok-section {
   display: flex;
   flex-direction: column;
@@ -2377,4 +2397,4 @@ body {
 .discriptin-block {
   display: flex;
   justify-content: space-between;
-}
+}/*# sourceMappingURL=style.css.map */
