--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -74,6 +74,7 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
+  -webkit-text-decoration-skip: ink;
   text-decoration-skip-ink: auto;
 }
 
@@ -109,6 +110,12 @@ select {
     scroll-behavior: auto !important;
   }
 }
+::-moz-placeholder {
+  padding-left: 20px;
+  color: #B3A99B;
+  font-size: 14px;
+}
+
 ::placeholder {
   padding-left: 20px;
   color: #B3A99B;
@@ -741,6 +748,7 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
+  -webkit-text-decoration-skip: ink;
   text-decoration-skip-ink: auto;
 }
 
@@ -883,6 +891,7 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
+  -webkit-text-decoration-skip: ink;
   text-decoration-skip-ink: auto;
 }
 
@@ -2436,6 +2445,20 @@ body {
   width: 370px;
 }
 
+@media only screen and (max-width: 1280px) {
+  .discr-block-lis__card1 {
+    width: 660px;
+  }
+
+  .discr-block-lis__card2 {
+    width: 320px;
+  }
+
+  .discr-block-lis__card3,
+.discr-block-lis__card4 {
+    width: 490px;
+  }
+}
 .messageok-section {
   display: flex;
   flex-direction: column;
@@ -2458,3 +2481,5 @@ body {
   display: flex;
   justify-content: space-between;
 }
+
+/*# sourceMappingURL=style.css.map */
