--- a/src/scss/labor-page/labor-information-section.scss
+++ b/src/scss/labor-page/labor-information-section.scss
@@ -97,4 +97,19 @@
     .db-lis-card__title {
         font-size: 20px;
     }
+
+    .db-lis-card__text {
+        width: 382px;
+    }
+    
+
+
+    .db-lis-card__text_card2 {
+        width: 243px;
+    }
+
+    .db-lis-card__text_card3,
+    .db-lis-card__text_card4 {
+    width: 315px;
+}
 }
