--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -122,7 +122,7 @@ select {
 }
 
 body {
-  background-color: #F7F7F7;
+  background-color: red;
   font-family: "Mulish", sans-serif;
   font-style: normal;
   color: #000000;
@@ -2261,7 +2261,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 40px;
+  height: 48px;
   background-color: #8E0532;
 }
 
@@ -2389,6 +2389,16 @@ body {
   }
   .db-lis-card__title {
     font-size: 20px;
+  }
+  .db-lis-card__text {
+    width: 382px;
+  }
+  .db-lis-card__text_card2 {
+    width: 243px;
+  }
+  .db-lis-card__text_card3,
+  .db-lis-card__text_card4 {
+    width: 315px;
   }
 }
 .messageok-section {
