--- a/src/scss/labor-page-style.css
+++ b/src/scss/labor-page-style.css
@@ -372,7 +372,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 40px;
+  height: 48px;
   background-color: #8E0532;
 }
 
@@ -500,5 +500,15 @@ body {
   }
   .db-lis-card__title {
     font-size: 20px;
+  }
+  .db-lis-card__text {
+    width: 382px;
+  }
+  .db-lis-card__text_card2 {
+    width: 243px;
+  }
+  .db-lis-card__text_card3,
+  .db-lis-card__text_card4 {
+    width: 315px;
   }
 }/*# sourceMappingURL=labor-page-style.css.map */
