--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -123,7 +123,7 @@ select {
 }
 
 body {
-  background-color: red;
+  background-color: #F7F7F7;
   font-family: "Mulish", sans-serif;
   font-style: normal;
   color: #000000;
@@ -2488,6 +2488,25 @@ body {
   .db-lis-card__text_card3,
 .db-lis-card__text_card4 {
     width: 315px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .labor-information-section__discr-block {
+    flex-direction: column;
+  }
+
+  .discr-block-lis__card1,
+.discr-block-lis__card2,
+.discr-block-lis__card3,
+.discr-block-lis__card4 {
+    width: 100%;
+  }
+
+  .db-lis-card__text,
+.db-lis-card__text_card2,
+.db-lis-card__text_card3,
+.db-lis-card__text_card4 {
+    width: 50%;
   }
 }
 .messageok-section {
