--- a/src/scss/labor-page/labor-information-section.css
+++ b/src/scss/labor-page/labor-information-section.css
@@ -98,4 +98,21 @@
   .db-lis-card__text_card4 {
     width: 315px;
   }
+}
+@media only screen and (max-width: 768px) {
+  .labor-information-section__discr-block {
+    flex-direction: column;
+  }
+  .discr-block-lis__card1,
+  .discr-block-lis__card2,
+  .discr-block-lis__card3,
+  .discr-block-lis__card4 {
+    width: 100%;
+  }
+  .db-lis-card__text,
+  .db-lis-card__text_card2,
+  .db-lis-card__text_card3,
+  .db-lis-card__text_card4 {
+    width: 70%;
+  }
 }/*# sourceMappingURL=labor-information-section.css.map */
