--- a/src/html/labor-page/labor-information-section.pug
+++ b/src/html/labor-page/labor-information-section.pug
@@ -5,7 +5,7 @@ section.labor-information-section
             .discr-block-lis__card.discr-block-lis__card1
                 .db-lis-card__title ЗАКАЗАТЬ ВНЕДРЕНИЕ
                 .db-lis-card__text Для расчета стоимости и сроков внедрения системы управления охраной труда на предприятии, можно оформить электронную заявку или позвонить по телефону +7 (812) 921-59-71 и согласовать видео встречу.
-                .left-part-sc__button Оформить заявку
+                .left-part-sc__button от 300 000 р.
             .discr-block-lis__card.discr-block-lis__card2
                 .db-lis-card__title АУДИТ КОМПАНИИ
                 .db-lis-card__text.db-lis-card__text_card2 После подписания договора проводится аудит компании, для уточнения начальных данных и выявления необходимых потребностей.
