--- a/src/html/labor-page/labor-suot-section.pug
+++ b/src/html/labor-page/labor-suot-section.pug
@@ -11,7 +11,7 @@ section.labor-suot-section
                         .left-part-sc__item Должностные инструкции
                         .left-part-sc__item Журналы инструктажей
                 .suot-card__bottom-part
-                    .left-part-sc__button Оформить заявку
+                    .left-part-sc__button от 60 000 р.
             .suot-card  
                 .suot-card__left-part
                     .left-part-sc__title Отдельные документы
@@ -21,7 +21,7 @@ section.labor-suot-section
                         .left-part-sc__item Конспект инструктажа
                         .left-part-sc__item Мероприятия по ОТ
                 .suot-card__bottom-part
-                    .left-part-sc__button Оформить заявку
+                    .left-part-sc__button от 2 500 р. 
             .suot-card.suot-card__none
                 .suot-card__left-part
                     .left-part-sc__title Отдельные документы
@@ -31,6 +31,6 @@ section.labor-suot-section
                         .left-part-sc__item Конспект инструктажа
                         .left-part-sc__item Мероприятия по ОТ
                 .suot-card__bottom-part
-                    .left-part-sc__button Оформить заявку
+                    .left-part-sc__button от 2 500 р.
 
 
