--- a/src/html/header.pug
+++ b/src/html/header.pug
@@ -5,7 +5,7 @@ header.header-section
             .logo-border
             .logo-title Менеджмент
         nav.nav-header-list 
-            a(href="lean.html").nav-header-list__item СМК
+            a(href="index.html").nav-header-list__item СМК
             a(href="labor.html").nav-header-list__item СУОТ
             a(href="supply.html").nav-header-list__item СУСиЗ
         .burger-room-block
