--- a/src/html/index-page/index-main-section.pug
+++ b/src/html/index-page/index-main-section.pug
@@ -1,15 +1,15 @@
 section.index-main-section
     .content-block.content-block_index-page-main-section
-        .title-block
-            .title-block__line-left
-            .title-block__title Бережливая компания
-            .title-block__line-right
+        //- .title-block
+        //-     .title-block__line-left
+        //-     .title-block__title Бережливая компания
+        //-     .title-block__line-right
         .container
             .discriptin-block
-                    .block-list
-                        .discriptin-block__list 
-                            h3.list__title Мы обеспечиваем <br>своим присутствием
-                            .list__item Командную работу
-                            .list__item Стандартизацию процессов
-                            .list__item Выявление и устранение потерь
-                            .list__item Постоянное совершенствование
+                .block-list
+                    .discriptin-block__list 
+                        h3.list__title Мы обеспечиваем <br>своим присутствием
+                        .list__item Командную работу
+                        .list__item Стандартизацию процессов
+                        .list__item Выявление и устранение потерь
+                        .list__item Постоянное совершенствование
