--- a/src/labor.pug
+++ b/src/labor.pug
@@ -22,5 +22,8 @@ block content
         include html/labor-page/labor-control-section.pug
         include html/labor-page/labor-information-section.pug
     include html/footer.pug 
+    script(src="js/app.js")
     script(src="js/modules/burger-action.js")
+
+    
     
