--- a/src/supply.pug
+++ b/src/supply.pug
@@ -18,7 +18,8 @@ block content
     include html/header.pug
     main
         h1(class="visually-hidden h1-visually", style="visibility: hidden;").h1__visually Аутсорсинг снабжения и закупочных процедур
-        include html/supply-page/supply-main-section.pug 
+        include html/labor-page/labor-main-section.pug 
+        //--include html/supply-page/supply-main-section.pug 
         include html/supply-page/supply-outsourcing-section.pug
         include html/supply-page/supply-task-section.pug
         include html/supply-page/supply-accounting-section.pug
@@ -27,4 +28,5 @@ block content
     include html/footer.pug 
     script(src="js/app.js")
     script(src="js/modules/burger-action.js")
+
 
