--- a/src/html/header.pug
+++ b/src/html/header.pug
@@ -16,7 +16,7 @@ header.header-section
             .room-butom Личный кабинет
     .container.nav-header-list__active
         .nav-block-active.none-block
-            a(href="lean.html").nav-header-list__item_active
+            a(href="index.html").nav-header-list__item_active
                 .nav-header-list__item Система менеджмента качества
             a(href="labor.html").nav-header-list__item_active
                 .nav-header-list__item Система управления охраной труда
