--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -74,7 +74,8 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
 }
 
 a {
@@ -108,6 +109,11 @@ select {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
+}
+::-moz-placeholder {
+  padding-left: 20px;
+  color: #B3A99B;
+  font-size: 14px;
 }
 ::placeholder {
   padding-left: 20px;
@@ -727,7 +733,8 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
 }
 
 a {
@@ -869,7 +876,8 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
 }
 
 a {
@@ -2431,4 +2439,4 @@ body {
 .discriptin-block {
   display: flex;
   justify-content: space-between;
-}
+}/*# sourceMappingURL=style.css.map */
