--- a/src/scss/header.css
+++ b/src/scss/header.css
@@ -1,10 +1,13 @@
+.header-section {
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .header-section__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   max-width: 1280px;
-  margin-right: auto;
-  margin-left: auto;
   padding-top: 8px;
   margin-bottom: 8px;
 }
@@ -142,7 +145,6 @@
   display: inline-block;
   width: 650px;
   padding: 20px 50px 20px 50px;
-  border: 1px solid #8E0532;
 }
 
 .nav-header-list__item_active {
