--- a/src/scss/supply-page/supply-main-section.scss
+++ b/src/scss/supply-page/supply-main-section.scss
@@ -8,7 +8,7 @@
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    background-color: $borderColorMax;
+    // background-color: $borderColorMax;
     background-image: url(../img/supply-page/main-img-section_1440.jpg);
     background-repeat: no-repeat;
     background-position: center;
