--- a/Compiled/css/style.css
+++ b/Compiled/css/style.css
@@ -74,6 +74,7 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
+  -webkit-text-decoration-skip: ink;
   text-decoration-skip-ink: auto;
 }
 
@@ -109,6 +110,12 @@ select {
     scroll-behavior: auto !important;
   }
 }
+::-moz-placeholder {
+  padding-left: 20px;
+  color: #B3A99B;
+  font-size: 14px;
+}
+
 ::placeholder {
   padding-left: 20px;
   color: #B3A99B;
@@ -194,13 +201,16 @@ button {
     padding: 0px 20px 0px 20px;
   }
 }
+.header-section {
+  margin-right: auto;
+  margin-left: auto;
+}
+
 .header-section__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   max-width: 1280px;
-  margin-right: auto;
-  margin-left: auto;
   padding-top: 8px;
   margin-bottom: 8px;
 }
@@ -338,7 +348,6 @@ button {
   display: inline-block;
   width: 650px;
   padding: 20px 50px 20px 50px;
-  border: 1px solid #8E0532;
 }
 
 .nav-header-list__item_active {
@@ -386,16 +395,13 @@ button {
 .index-main-section {
   display: flex;
   justify-content: space-between;
-  width: 1280px;
-  height: 930px;
+  max-width: 100%;
+  height: 650px;
   margin-bottom: 40px;
   background-image: url(../../img/index-page/bg-index-main.jpg);
   background-repeat: no-repeat;
-  background-position: bottom;
-}
-
-.content-block_index-page-main-section {
-  padding-top: 0px;
+  background-position: center;
+  background-color: #F9F8F8;
 }
 
 .title-block {
@@ -425,11 +431,18 @@ button {
   background-color: #8E0532;
 }
 
+.discriptin-block {
+  position: relative;
+}
+
 .discriptin-block__img {
   margin-right: 20px;
 }
 
 .block-list {
+  position: absolute;
+  top: 50px;
+  left: 50px;
   padding: 20px 80px 40px 40px;
   border-radius: 0px;
   background-color: #F7F7F7;
@@ -740,6 +753,7 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
+  -webkit-text-decoration-skip: ink;
   text-decoration-skip-ink: auto;
 }
 
@@ -882,6 +896,7 @@ ol[class] {
 
 /* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
 a:not([class]) {
+  -webkit-text-decoration-skip: ink;
   text-decoration-skip-ink: auto;
 }
 
@@ -1218,7 +1233,6 @@ select {
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  background-color: #8E0532;
   background-image: url(../img/supply-page/main-img-section_1440.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -2522,3 +2536,5 @@ body {
   display: flex;
   justify-content: space-between;
 }
+
+/*# sourceMappingURL=style.css.map */
