--- a/src/scss/index-page/index-main-section.css
+++ b/src/scss/index-page/index-main-section.css
@@ -1,16 +1,13 @@
 .index-main-section {
   display: flex;
   justify-content: space-between;
-  width: 1280px;
-  height: 930px;
+  max-width: 100%;
+  height: 650px;
   margin-bottom: 40px;
   background-image: url(../../img/index-page/bg-index-main.jpg);
   background-repeat: no-repeat;
-  background-position: bottom;
-}
-
-.content-block_index-page-main-section {
-  padding-top: 0px;
+  background-position: center;
+  background-color: #F9F8F8;
 }
 
 .title-block {
@@ -40,11 +37,18 @@
   background-color: #8E0532;
 }
 
+.discriptin-block {
+  position: relative;
+}
+
 .discriptin-block__img {
   margin-right: 20px;
 }
 
 .block-list {
+  position: absolute;
+  top: 50px;
+  left: 50px;
   padding: 20px 80px 40px 40px;
   border-radius: 0px;
   background-color: #F7F7F7;
