--- a/src/html/index-page/index-step-section.pug
+++ b/src/html/index-page/index-step-section.pug
@@ -1,7 +1,7 @@
 section.step-section     
     .content-block
         .container
-            h3.content__title.content__title_adaptation-section Секрет эффективной компании
+            h3.content__title.content__title_adaptation-section.content-title__step-section Секрет эффективной компании
             .discription-block
                 include discription-card1.pug 
                 include discription-card2.pug
